--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,5 +29,15 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn clean install
+ 
+    - name: Build & push Docker image
+      uses: mr-smithers-excellent/docker-build-push@v5
+      with:
+       image: ramusingh7/projectcicd
+       tags: 1.0,  
+       registry: docker.io
+       dockerfile: Dockerfile.ci
+       username: ${{ secrets.DOCKER_USERNAME }}
+       password: ${{ secrets.DOCKER_PASSWORD }}
 
     
