--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -36,7 +36,7 @@ jobs:
        image: ramusingh7/projectcicd
        tags: 1.0,  
        registry: docker.io
-       dockerfile: Dockerfile.ci
+       dockerfile: Dockerfile
        username: ${{ secrets.DOCKER_USERNAME }}
        password: ${{ secrets.DOCKER_PASSWORD }}
 
